force-app/main/default/objects/Enrollment_Request__c/Enrollment_Request__c.object-meta.xml
<CustomObject>
    <label>Enrollment Request</label>
    <pluralLabel>Enrollment Requests</pluralLabel>
    <nameField>
        <label>Enrollment Request Number</label>
        <type>AutoNumber</type>
        <displayFormat>ER-{0000000}</displayFormat>
    </nameField>
    <description>Captures member enrollment requests with member information, coverage details, and validation tracking.</description>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>