force-app/main/default/objects/Enrollment_Request__c/fields/EnrollmentNumber__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentNumber__c</fullName>
    <label>Enrollment Number</label>
    <type>Text</type>
    <length>100</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>Unique enrollment identifier assigned by the external system. Used for lookups and upserts.</description>
</CustomField>