force-app/main/default/objects/Enrollment_Request__c/fields/IntegrationStatus__c.field-meta.xml
<CustomField>
    <fullName>IntegrationStatus__c</fullName>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>In Progress</fullName><default>false</default><label>In Progress</label></value>
            <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>Current state of the enrollment request in the integration workflow: Pending, In Progress, Completed, or Failed.</description>
</CustomField>