force-app/main/default/objects/Enrollment_Request__c/fields/LastIntegrationSync__c.field-meta.xml
<CustomField>
    <fullName>LastIntegrationSync__c</fullName>
    <label>Last Integration Sync</label>
    <type>DateTime</type>
    <description>Timestamp of the last integration synchronization for this enrollment request.</description>
</CustomField>