force-app/main/default/objects/Enrollment_Request__c/fields/MemberID__c.field-meta.xml
<CustomField>
    <fullName>MemberID__c</fullName>
    <label>Member ID</label>
    <type>Text</type>
    <length>100</length>
    <description>Unique member identifier from the external system (e.g., employee ID, policy number).</description>
</CustomField>