force-app/main/default/objects/Enrollment_Request__c/validationRules/DOB_Not_Future_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>DOB_Not_Future_Date</fullName>
    <active>true</active>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>Date of Birth cannot be a future date.</errorMessage>
</ValidationRule>