force-app/main/default/objects/Enrollment_Request__c/validationRules/EffectiveDate_Not_Before_Current.validationRule-meta.xml
<ValidationRule>
    <fullName>EffectiveDate_Not_Before_Current</fullName>
    <active>true</active>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>Effective Date cannot be before the current date.</errorMessage>
</ValidationRule>